<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowItWorks"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/txtHowItWorkBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="How It Works"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/txtHowItWorkBanner"
        android:paddingTop="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/txtHeaderDonation"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardview_banner_produk"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle1"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/hijautua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle1_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/hijautua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle2_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle3"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/hijautua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howittittle3_content"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/hijautua"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <LinearLayout
            android:id="@+id/viewHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/homeicon"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/txtHome_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom1"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/viewHowItWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/howitworkicon"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_how" />

            <TextView
                android:id="@+id/txtHowIt_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom2"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/viewUser_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/usericon_home"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/txtUser_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom3"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>