<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/txtHowItWorkBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Daftar Donasi Sampah"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    app:cardCornerRadius="15dp"
                    android:paddingTop="5dp"
                    android:layout_margin="15dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:layout_gravity="left"
                        android:gravity="center"
                        android:text="@string/market_banner"
                        android:textColor="@android:color/black"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/donate_button"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="90dp"
                        android:gravity="center"
                        android:text="Ayo Donasikan Sampahmu!"
                        android:textColor="@color/hijautua"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

        </android.support.v7.widget.RecyclerView>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/hijautua"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <LinearLayout
                    android:id="@+id/viewHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/homeicon"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_home" />

                    <TextView
                        android:id="@+id/txtHome_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:text="@string/menubottom1"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/viewUser_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/usericon_home"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_user" />

                    <TextView
                        android:id="@+id/txtUser_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:text="@string/menubottom3"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

</RelativeLayout>