<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Selamat Datang!"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="175dp"
            app:cardCornerRadius="15dp"
            android:paddingTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="240dp"
                android:layout_height="115dp"
                android:layout_gravity="left"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="Ayo Donasikan Sampahmu dan Jadikan Dirimu Pelopor Kesadaran Lingkungan!"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/donate_button"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="15dp"
                android:text="Donasi"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/hijautua"
                />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="82dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/donate" />
        </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtSubBannerFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="319dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/hijautua"
        android:text="GOTONGSAMPAH.ID" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignTop="@id/txtSubBannerFirst"
        android:paddingTop="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView_Market"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/market_logo" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Display Donasi Tertampung"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/hijautua"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <LinearLayout
            android:id="@+id/viewHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/homeicon"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/txtHome_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom1"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/viewHowItWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/howitworkicon"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_how" />

            <TextView
                android:id="@+id/txtHowIt_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom2"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/viewUser_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/usericon_home"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/txtUser_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/menubottom3"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>